--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "request-promise": "^4.2.2"
   },
   "scripts": {
+    "lint": "prettier --write src/**/*.js",
+    "lint:check": "prettier --check src/**/*.js",
     "start": "node src/server.js",
     "test": "jest"
   },
   "devDependencies": {
     "jest": "^23.4.0",
     "nock": "^9.4.2",
+    "prettier": "^1.19.1",
     "superagent": "^3.8.3",
     "supertest": "^3.1.0"
   }
