--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_URL=example.ngrok.io
+APP_URL=verabradleyoutlet-dev.myshopify.com
 CASHIER_DOMAIN=cashier.boldcommerce.com
-CASHIER_CLIENT_ID=foo
-CASHIER_CLIENT_SECRET=bar
+CASHIER_CLIENT_ID=RI2K8DvHvrhFVnAQ93DuPHn1Fo4ag3ND
+CASHIER_CLIENT_SECRET=UhiPy1iCh6XXhMLPmzOcFrDfP1m60C1u
