--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_URL=verabradleyoutlet-dev.myshopify.com
+APP_URL=https://testgithubapps.herokuapp.com
 CASHIER_DOMAIN=cashier.boldcommerce.com
-CASHIER_CLIENT_ID=RI2K8DvHvrhFVnAQ93DuPHn1Fo4ag3ND
-CASHIER_CLIENT_SECRET=UhiPy1iCh6XXhMLPmzOcFrDfP1m60C1u
+CASHIER_CLIENT_ID=1d295e0c-b087-4ec5-97e9-70abfcfe3d60
+CASHIER_CLIENT_SECRET=77b1d41c551f2917ac0147cc3029cb7914bac577
