--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,23 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. 
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
+jobs:
+  deploy:
+    working_directory: ~/repo
+    executor: node/default
+    steps:
+      - checkout
+      - azure-cli/install
+      - azure-cli/login-with-service-principal
+      - run:
+          name: Install Azure functions tools
+          command: sudo npm i -g azure-functions-core-tools@3 --unsafe-perm true
+      - run:
+          name: Deploy to Azure function App
+          command: func azure functionapp publish $FUNCTION_APP_NAME --javascript
 
 orbs:
-  azure-cli: circleci/azure-cli@1.2.0
-
-
-jobs:
-  example-job:
-    docker:
-      # replace with your preferred image
-      - image: cimg/base:stable
-    steps:
-      - azure-cli/install
+  azure-cli: circleci/azure-cli@1.0.0
+  node: circleci/node@4.1.0
+version: 2.1
 workflows:
-  example-workflow:
+  login-workflow:
     jobs:
-      - example-job
+      - deploy
